--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ iframe {
   height: 100%;
   border: none;
 }
+
+/* LOGIN OVERLAY */
 #loginOverlay {
   position: fixed;
   inset: 0;
@@ -34,6 +36,12 @@ iframe {
   color: #fff;
   z-index: 999;
 }
+
+#logo {
+  width: 140px;
+  margin-bottom: 20px;
+}
+
 #loginOverlay input {
   padding: 12px;
   font-size: 16px;
@@ -42,6 +50,7 @@ iframe {
   border: none;
   margin-bottom: 12px;
 }
+
 #loginOverlay button {
   padding: 12px 18px;
   font-size: 16px;
@@ -50,6 +59,7 @@ iframe {
   background: #007bff;
   color: #fff;
 }
+
 #loginError {
   color: #ff4d4d;
   margin-top: 12px;
@@ -60,6 +70,7 @@ iframe {
 <body>
 
 <div id="loginOverlay">
+  <img id="logo" src="./logo.png" alt="Bet Point Logo" />
   <h2>Enter Password</h2>
   <input type="password" id="passwordInput" placeholder="Password" />
   <button onclick="submitPassword()">Submit</button>
@@ -73,22 +84,12 @@ iframe {
 const VERIFY_URL = "https://your-supabase/functions/v1/verify-link";
 const LOGIN_URL  = "https://your-supabase/functions/v1/login-update";
 const APP_URL    = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
-
-const POLL_INTERVAL_MS = 5000; // ⏱️ hard enforcement
+const POLL_INTERVAL_MS = 5000;
 
 /* ================= STATE ================= */
 let externalId = null;
 let playerId   = null;
 let pollTimer  = null;
-
-/* ================= BOOT ================= */
-window.addEventListener("DOMContentLoaded", async () => {
-  externalId = localStorage.getItem("external_id");
-  if (!externalId) return;
-
-  await initOneSignal(externalId);
-  startPolling();
-});
 
 /* ================= LOGIN ================= */
 async function submitPassword() {
@@ -98,14 +99,14 @@ async function submitPassword() {
 
   error.textContent = "";
 
-  const res = await fetch(VERIFY_URL, {
+  const verify = await fetch(VERIFY_URL, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ row_id: password })
   });
 
-  const data = await res.json();
-  if (!data.valid) {
+  const vdata = await verify.json();
+  if (!vdata.valid) {
     error.textContent = "Invalid password";
     return;
   }
@@ -113,7 +114,7 @@ async function submitPassword() {
   externalId = password;
   localStorage.setItem("external_id", externalId);
 
-  await initOneSignal(externalId);
+  await initOneSignalAndRegister(externalId);
   startPolling();
 }
 
@@ -139,17 +140,20 @@ function forceLogout(reason) {
   document.getElementById("loginOverlay").style.display = "flex";
 }
 
-/* ================= ONESIGNAL INIT ================= */
-async function initOneSignal(row_id) {
+/* ================= ONESIGNAL INIT + REGISTER ================= */
+async function initOneSignalAndRegister(row_id) {
   return new Promise((resolve) => {
-    window.OneSignalDeferred = window.OneSignalDeferred || [];
-    OneSignalDeferred.push(async function (OneSignal) {
+
+    // Reset OneSignal user completely
+    window.OneSignalDeferred = [];
+    window.OneSignalDeferred.push(async function (OneSignal) {
 
       await OneSignal.init({
         appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
         notifyButton: { enable: true }
       });
 
+      await OneSignal.logout();
       await OneSignal.login(row_id);
 
       playerId = await OneSignal.User.getId();
@@ -158,13 +162,23 @@ async function initOneSignal(row_id) {
         return;
       }
 
+      // 🔐 OVERWRITE allowed device in DB
+      await fetch(LOGIN_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          row_id,
+          player_id: playerId
+        })
+      });
+
       unlockApp();
       resolve();
     });
   });
 }
 
-/* ================= HARD POLLING ENFORCEMENT ================= */
+/* ================= HARD POLLING ================= */
 function startPolling() {
   if (pollTimer) clearInterval(pollTimer);
 
@@ -180,17 +194,11 @@ function startPolling() {
 
       const data = await res.json();
 
-      if (!data.player_id) {
-        forceLogout("No player registered");
-        return;
-      }
-
-      if (data.player_id !== playerId) {
+      if (!data.player_id || data.player_id !== playerId) {
         forceLogout("Player ID mismatch");
       }
-
-    } catch (err) {
-      console.error("Polling error:", err);
+    } catch (e) {
+      console.error("Polling error", e);
     }
   }, POLL_INTERVAL_MS);
 }
