--- a/index.html
+++ b/index.html
@@ -173,4 +173,4 @@ async function registerCurrentDevice(row_id, newPlayerId) {
 </script>
 
 </body>
-</html> this is not loggin out just get the current player from one signal and make sure it matches the player id in onesignal_users
+</html> 
