--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 html, body {
   margin:0;
   height:100%;
-  background:#000;
+  width:100%;
   font-family:Arial,sans-serif;
+  background:#000;
 }
 iframe {
   width:100%;
   height:100%;
   border:none;
+  display:block;
 }
 #loginOverlay {
   position:fixed;
@@ -31,17 +33,18 @@ iframe {
   flex-direction:column;
   justify-content:center;
   align-items:center;
-  color:#fff;
   z-index:999;
+  color:#fff;
 }
 #loginOverlay img {
   width:96px;
+  height:96px;
   margin-bottom:16px;
 }
 #loginOverlay input {
   padding:12px;
-  width:220px;
   font-size:16px;
+  width:220px;
   border-radius:6px;
   border:none;
   margin-bottom:12px;
@@ -66,10 +69,10 @@ iframe {
 
 <!-- LOGIN -->
 <div id="loginOverlay">
-  <img src="./icon-1024x1024.png">
+  <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Enter Password</h2>
   <input type="password" id="rowIdInput" placeholder="Password">
-  <button onclick="login()">Submit</button>
+  <button onclick="submitRowId()">Submit</button>
   <div id="loginError"></div>
 </div>
 
@@ -78,40 +81,101 @@ iframe {
 
 <script>
 /* ================= CONFIG ================= */
-const APP_URL = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
-const POLL_MS = 4000;
+const VERIFY_URL   = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link";
+const REGISTER_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device";
+const CHECK_URL    = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/check-device";
+const APP_URL      = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
+const POLL_MS      = 5000;
+
+const deviceType = /Mobi|Android/i.test(navigator.userAgent) ? "mobile" : "web";
 
 let rowId = null;
-let currentOneSignalId = null;
+let linkId = null;
 let pollTimer = null;
 
+/* ================= AUTO LOGIN ================= */
+window.addEventListener("DOMContentLoaded", () => {
+  const r = localStorage.getItem("rowId");
+  const l = localStorage.getItem("linkId");
+
+  if (r && l) {
+    rowId = r;
+    linkId = l;
+    unlockApp();
+    initOneSignal();
+    startPolling();
+  }
+});
+
 /* ================= LOGIN ================= */
-async function login() {
-  const input = document.getElementById("rowIdInput");
-  rowId = input.value.trim();
+async function submitRowId() {
+  const error = document.getElementById("loginError");
+  rowId = document.getElementById("rowIdInput").value.trim();
   if (!rowId) return;
 
-  localStorage.setItem("rowId", rowId);
-  initOneSignal();
+  error.textContent = "";
+
+  try {
+    // 🔥 HARD RESET ONESIGNAL BEFORE NEW LOGIN
+    if (window.OneSignal?.User) {
+      try { await OneSignal.User.logout(); } catch {}
+    }
+
+    const res = await fetch(VERIFY_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ row_id: rowId })
+    });
+
+    const data = await res.json();
+    if (!data.valid) {
+      error.textContent = "Invalid password";
+      return;
+    }
+
+    linkId = data.link_id;
+    localStorage.setItem("rowId", rowId);
+    localStorage.setItem("linkId", linkId);
+
+    unlockApp();
+    initOneSignal();
+    startPolling();
+
+  } catch (err) {
+    console.error(err);
+    error.textContent = "Server error";
+  }
 }
 
 /* ================= UI ================= */
 function unlockApp() {
   document.getElementById("loginOverlay").style.display = "none";
-  document.getElementById("appFrame").src = APP_URL;
+  const frame = document.getElementById("appFrame");
+  if (!frame.src) frame.src = APP_URL;
 }
 
-async function hardKick(reason) {
-  console.warn("⛔ HARD KICK:", reason);
+/* ================= HARD KICK ================= */
+async function forceLogout(reason) {
+  console.warn("⛔ KICKED:", reason);
 
   try {
-    await OneSignal.User.logout();
-  } catch {}
+    if (window.OneSignal?.User) {
+      await OneSignal.User.logout();
+    }
+  } catch (e) {
+    console.warn("OneSignal logout failed", e);
+  }
 
-  localStorage.clear();
-  sessionStorage.clear();
+  localStorage.removeItem("rowId");
+  localStorage.removeItem("linkId");
 
-  if (pollTimer) clearInterval(pollTimer);
+  rowId = null;
+  linkId = null;
+
+  if (pollTimer) {
+    clearInterval(pollTimer);
+    pollTimer = null;
+  }
 
   document.getElementById("appFrame").src = "";
   document.getElementById("loginOverlay").style.display = "flex";
@@ -119,58 +183,70 @@ async function hardKick(reason) {
 
 /* ================= ONESIGNAL ================= */
 function initOneSignal() {
-  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  // 🔥 Prevent stale listeners
+  window.OneSignalDeferred = [];
+
   OneSignalDeferred.push(async function (OneSignal) {
 
     await OneSignal.init({
       appId: "2b94ad70-2518-44d4-aaef-bfb95739206f",
+      path: "/signals/",
+      serviceWorkerPath: "signals/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath: "signals/OneSignalSDKUpdaterWorker.js",
       notifyButton: { enable: true }
     });
 
-    await OneSignal.login(rowId);
+    const rowIdLocal  = localStorage.getItem("rowId");
+    const linkIdLocal = localStorage.getItem("linkId");
+    if (!rowIdLocal) return;
 
-    currentOneSignalId = OneSignal.User.onesignalId;
-    if (!currentOneSignalId) {
-      hardKick("No OneSignal ID");
-      return;
-    }
+    OneSignal.User.PushSubscription.addEventListener("change", async (event) => {
+      if (!event.current?.optedIn) return;
 
-    unlockApp();
-    startPolling();
+      const oneSignalId = OneSignal.User.onesignalId;
+      if (!oneSignalId) return;
+
+      await OneSignal.login(rowIdLocal);
+
+      await fetch(REGISTER_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          rowId: rowIdLocal,
+          linkId: linkIdLocal,
+          one_signal_id: oneSignalId,
+          device_type: deviceType
+        })
+      });
+    });
   });
 }
 
 /* ================= HARD ENFORCEMENT ================= */
 function startPolling() {
+  if (pollTimer) clearInterval(pollTimer);
+
   pollTimer = setInterval(async () => {
+    if (!rowId) return;
+
     try {
-      const id = OneSignal.User.onesignalId;
-      const sub = await OneSignal.User.PushSubscription.get();
+      const res = await fetch(CHECK_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ rowId })
+      });
 
-      if (!id || !sub?.optedIn) {
-        await hardKick("Push disabled");
-        return;
+      const data = await res.json();
+
+      if (!data.valid) {
+        await forceLogout("Device replaced");
       }
 
-      if (id !== currentOneSignalId) {
-        await hardKick("Session replaced");
-        return;
-      }
-
-    } catch {
-      await hardKick("OneSignal desync");
+    } catch (err) {
+      console.error("Poll error", err);
     }
   }, POLL_MS);
 }
-
-/* ================= AUTO BOOT ================= */
-window.addEventListener("DOMContentLoaded", () => {
-  const saved = localStorage.getItem("rowId");
-  if (saved) {
-    rowId = saved;
-    initOneSignal();
-  }
-});
 </script>
 
 </body>
